--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ MAIN := main.img
 
 $(MAIN):
 	as -32 boot.S -o boot.o
-	gcc -c kernel.c -ffreestanding -m32 -o kernel.o -std=gnu99
+	g++ -c kernel.cpp -ffreestanding -m32 -o kernel.o -std=gnu99
 	gcc -ffreestanding -m32 -nostdlib -o '$(MULTIBOOT)' -T linker.ld boot.o kernel.o -lgcc
 	grub-mkrescue -o '$@' '$(ISODIR)'
 
@@ -17,6 +17,5 @@ clean:
 
 run: $(MAIN)
 	qemu-system-i386 -cdrom '$(MAIN)'
-	# Would also work.
 	#qemu-system-i386 -hda '$(MAIN)'
 	#qemu-system-i386 -kernel '$(MULTIBOOT)'
