--- a/src/Makefile
+++ b/src/Makefile
@@ -2,14 +2,14 @@
 
 ISODIR := iso
 MULTIBOOT := $(ISODIR)/boot/main.elf
-MAIN := main.img
+MAIN := main.iso
 
 .PHONY: clean run
 
 $(MAIN):
 	as -32 boot.S -o boot.o
-	g++ -c kernel.cpp -ffreestanding -m32 -o kernel.o -std=gnu99
-	gcc -ffreestanding -m32 -nostdlib -o '$(MULTIBOOT)' -T linker.ld boot.o kernel.o -lgcc
+	g++ -c kernel.cpp -ffreestanding -m32 -o kernel.o -std=c++11
+	gcc -ffreestanding -m32 -nostdlib -o '$(MULTIBOOT)' -T linker.ld boot.o kernel.o -lgcc -lc
 	grub-mkrescue -o '$@' '$(ISODIR)'
 
 clean:
@@ -17,5 +17,3 @@ clean:
 
 run: $(MAIN)
 	qemu-system-i386 -cdrom '$(MAIN)'
-	#qemu-system-i386 -hda '$(MAIN)'
-	#qemu-system-i386 -kernel '$(MULTIBOOT)'
