--- a/src/Makefile
+++ b/src/Makefile
@@ -7,9 +7,9 @@ MAIN := monkeos.iso
 .PHONY: clean run
 
 $(MAIN):
-	as -32 boot.S -o boot.o
+	as -32 asm/boot.S -o boot.o
 	g++ -c kernel.cpp -ffreestanding -m32 -o kernel.o -std=c++11
-	gcc -ffreestanding -m32 -nostdlib -o '$(MULTIBOOT)' -T linker.ld boot.o kernel.o -lgcc -lc
+	gcc -ffreestanding -m32 -nostdlib -o '$(MULTIBOOT)' -T linker/linker.ld boot.o kernel.o -lgcc -lc
 	grub-mkrescue -o '$@' '$(ISODIR)'
 
 clean:
