--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 .POSIX:
 
-ISODIR := iso
+ISODIR := root
 MULTIBOOT := $(ISODIR)/boot/main.elf
 MAIN := monkeos.iso
 
@@ -9,10 +9,13 @@ MAIN := monkeos.iso
 $(MAIN):
 	as -32 asm/boot.S -o boot.o
 	g++ -c kernel.cpp -ffreestanding -m32 -o kernel.o -std=c++11
+	mkdir -p $(ISODIR)/boot
+	cp -r grub $(ISODIR)/boot
 	gcc -ffreestanding -m32 -nostdlib -o '$(MULTIBOOT)' -T linker/linker.ld boot.o kernel.o -lgcc -lc
 	grub-mkrescue -o '$@' '$(ISODIR)'
 
 clean:
+	rm -rf $(ISODIR)
 	rm -f *.o '$(MULTIBOOT)' '$(MAIN)'
 
 run: $(MAIN)
